--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,11 @@
 name = "ariprog"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["Kauê Fraga Rodrigues"]
+description = "🧮 Need a powerful and simple library to work with arithmetic progressions in Rust? You should definitively try ariprog out!"
+license = "MIT"
+readme = "crates-readme.md"
+keywords = ["arithmetic-progression", "math", "ap"]
+repository = "https://github.com/kauefraga/ariprog"
 
 [dependencies]
