docs: remove crates-readme.md, change description and remove it from README.md

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "ariprog"
 version = "0.1.1"
 edition = "2021"
 authors = ["Kauê Fraga Rodrigues"]
-description = "🧮 Need a powerful and simple library to work with arithmetic progressions in Rust? You should definitively try ariprog out!"
+description = "🧮 Need a powerful and simple library to work with arithmetic progressions in Rust? You should definitively try out ariprog!"
 license = "MIT"
 keywords = ["math", "ap"]
 repository = "https://github.com/kauefraga/ariprog"
